# Odin.cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Odin  README.md  a.out  cmake_install.cmake  main.cpp  odin  odin.h
base/: object.cpp  object.h  os.h  time.h  util.h
cmake/: FindOdin.cmake  FindSDL2.cmake
core/: game_object.h  node.h  scene.h
core/components/: component.cpp  component.h
examples/sprites/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  sprites
math/: color.cpp  color.h  mat2.cpp  mat2.h  mat3.cpp  mat3.h  mat32.cpp  mat32.h  mat4.cpp  mat4.h  mathf.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/: odin.cpp  odin.h  odin.hpp
src/assets/: asset.cpp  asset.h  assets.cpp  assets.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_old.cpp  mesh_old.h  texture.cpp  texture.h
src/base/: array.cpp  array.h  base.hpp  enums.hpp  event_emitter.h  object.cpp  object.h  object_pool.h  os.h  os.hpp  time.h  time.hpp  typedefs.hpp  util.h  util.hpp
src/config/: game_config.hpp
src/core/: array.cpp  array.h  core.hpp  enums.hpp  game_object.cpp  game_object.h  object.cpp  object.h  object_pool.cpp  os.hpp  scene.cpp  scene.h  time.hpp  typedefs.hpp
src/core_old/: game_object.cpp  game_object.h  scene.cpp  scene.h
src/game/: base_game.cpp  base_game.h  game.cpp  game.h  window.cpp  window.h
src/input/: input.hpp  input_axes.hpp  input_axis.hpp  input_button.hpp  input_buttons.hpp  input_touch.hpp  input_touches.hpp
src/math/: aabb2.cpp  aabb2.h  aabb3.cpp  aabb3.h  color.cpp  (+19 more)
(+117 files in other folders)
